--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,15 @@
 
 export(.DEM_request)
 export(.ortho_request)
+export(convertLAZ)
 export(download_gugik_dataset_for_municipality)
 export(format_file_name)
 export(get_gugik_data)
 export(link_gugik_data_from_archive)
 importFrom(httr,parse_url)
 importFrom(jsonlite,fromJSON)
+importFrom(lidR,readLAS)
+importFrom(lidR,writeLAS)
 importFrom(openssl,sha1)
 importFrom(osmdata,add_osm_features)
 importFrom(osmdata,getbb)
